src/_includes/index.css
@charset "UTF-8";

/**
	One style-sheet to rule them all, as I truly hate writing CSS. Most of this
	is inspired by: https://github.com/appcss/app, but I didn't feel like
	adopting the framework in its' entirety.
	**/

/* inter-latin-wght-normal */
@font-face {
	font-family: "Inter Variable";
	font-style: normal;
	font-display: swap;
	font-weight: 100 900;
	src: url(https://cdn.jsdelivr.net/fontsource/fonts/inter:vf@latest/latin-wght-normal.woff2)
		format("woff2-variations");
	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
		U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
		U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

:root {
	/* Font Base Values */
	--app-font-family: "Inter Variable", system-ui, "Segoe UI", Roboto, Helvetica,
		Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
	--app-line-height: 1.5;
	--app-font-weight: 400;
	--app-font-size: 100%;
	--app-text-underline-offset: 0.1rem;

	/* Spacing */
	--app-spacing: 1rem;
	--app-typography-spacing-vertical: var(--app-spacing);
	--app-block-spacing-vertical: var(--app-spacing);
	--app-block-spacing-horizontal: var(--app-spacing);
	--app-grid-column-gap: var(--app-spacing);
	--app-grid-row-gap: var(--app-spacing);
	--app-border-radius: 0.25rem;

	/* Colors */
	--app-background-color--light: #efc05e;
	--app-background-color--dark: #111111;

	--app-text-color--light: #111111;
	--app-text-color--dark: #f3f3f4;

	--app-accent-color--light: #111111;
	--app-accent-color--dark: rgba(247, 114, 69);
}

/* Screen Sizes */
@media (min-width: 576px) {
	:root {
		--app-font-size: 106.25%;
	}
}

@media (min-width: 768px) {
	:root {
		--app-font-size: 112.5%;
	}
}

@media (min-width: 1024px) {
	:root {
		--app-font-size: 118.75%;
	}
}

@media (min-width: 1280px) {
	:root {
		--app-font-size: 125%;
	}
}

@media (min-width: 1536px) {
	:root {
		--app-font-size: 131.25%;
	}
}

:root {
	color-scheme: light dark;
	--app-background-color: light-dark(
		var(--app-background-color--light),
		var(--app-background-color--dark)
	);

	--app-accent-color: light-dark(
		var(--app-accent-color--light),
		var(--app-accent-color--dark)
	);

	--app-color: light-dark(
		var(--app-text-color--light),
		var(--app-text-color--dark)
	);
}

*,
*::before,
*::after {
	box-sizing: border-box;
	background-repeat: no-repeat;
}

::before,
::after {
	text-decoration: inherit;
	vertical-align: inherit;
}

:where(:root) {
	-webkit-tap-highlight-color: transparent;
	-webkit-text-size-adjust: 100%;
	-moz-text-size-adjust: 100%;
	text-size-adjust: 100%;
	background-color: var(--app-background-color);
	color: var(--app-color);
	font-weight: var(--app-font-weight);
	font-size: var(--app-font-size);
	line-height: var(--app-line-height);
	font-family: var(--app-font-family), sans-serif;
	text-underline-offset: var(--app-text-underline-offset);
	text-rendering: optimizeLegibility;
	overflow-wrap: break-word;
	-moz-tab-size: 4;
	tab-size: 4;
}

body {
	width: 100%;
	margin: 0;
	transition:
		color 0.5s,
		background-color 0.5s;

	font-family: var(--app-font-family), sans-serif;
	font-size: var(--app-font-size);

	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

main {
	display: block;
}

body > header,
body > main,
body > footer {
	padding-block: var(--app-block-spacing-vertical);
}

section {
	margin-bottom: var(--app-block-spacing-vertical);
}

.container,
.container-fluid {
	width: 100%;
	margin-right: auto;
	margin-left: auto;
	padding-right: var(--app-spacing);
	padding-left: var(--app-spacing);
}

@media (min-width: 576px) {
	.container {
		max-width: 510px;
		padding-right: 0;
		padding-left: 0;
	}
}

@media (min-width: 768px) {
	.container {
		max-width: 700px;
	}
}

@media (min-width: 1024px) {
	.container {
		max-width: 950px;
	}
}

@media (min-width: 1280px) {
	.container {
		max-width: 1200px;
	}
}

@media (min-width: 1536px) {
	.container {
		max-width: 1450px;
	}
}

address,
blockquote,
dl,
ol,
p,
pre,
table,
ul {
	margin-top: 0;
	margin-bottom: var(--app-typography-spacing-vertical);
	color: inherit;
	font-style: normal;
	font-weight: var(--app-font-weight);
}

h1,
h2,
h3,
h4,
h5,
h6 {
	--app-font-weight: 700;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	margin-top: 0;
	margin-bottom: var(--app-typography-spacing-vertical);
	font-weight: var(--app-font-weight);
	font-size: var(--app-font-size);
	line-height: var(--app-line-height);
	font-family: var(--app-font-family), sans-serif;
}

:where(article, address, blockquote, dl, figure, form, ol, p, pre, table, ul)
	~ :is(h1, h2, h3, h4, h5, h6) {
	margin-top: var(--app-typography-spacing-top);
}

h1 {
	--app-font-size: 2rem;
	--app-line-height: 1.125;
	--app-typography-spacing-top: 3rem;
}

h2 {
	--app-font-size: 1.75rem;
	--app-line-height: 1.15;
	--app-typography-spacing-top: 2.625rem;
}

h3 {
	--app-font-size: 1.5rem;
	--app-line-height: 1.175;
	--app-typography-spacing-top: 2.25rem;
}

h4 {
	--app-font-size: 1.25rem;
	--app-line-height: 1.2;
	--app-typography-spacing-top: 1.874rem;
}

h5 {
	--app-font-size: 1.125rem;
	--app-line-height: 1.225;
	--app-typography-spacing-top: 1.6875rem;
}

h6 {
	--app-font-size: 1rem;
	--app-line-height: 1.25;
	--app-typography-spacing-top: 1.5rem;
}

p {
	margin-bottom: var(--app-typography-spacing-vertical);
}

a {
	color: var(--color-text);
}

blockquote {
	font-family: "Helvetica Neue", serif;
	display: block;
	margin: var(--app-typography-spacing-vertical) 0;
	padding: var(--app-spacing);
	border-right: none;
	border-left: 0.25rem solid var(--app-accent-color);
	border-inline-start: 0.25rem solid var(--app-accent-color);
	border-inline-end: none;
}

blockquote footer {
	margin-top: calc(var(--app-typography-spacing-vertical) * 0.5);
	color: var(--color-text);
}

hgroup {
	margin-bottom: var(--app-typography-spacing-vertical);
}

hgroup > * {
	margin-top: 0;
	margin-bottom: 0;
}

hgroup > *:not(:first-child):last-child {
	--app-font-weight: unset;
}

:where(ol, ul) li {
	margin-bottom: calc(var(--app-typography-spacing-vertical) * 0.25);
}

:where(dl, ol, ul) :where(dl, ol, ul) {
	margin: calc(var(--app-typography-spacing-vertical) * 0.25) 0 0;
}

ul li {
	list-style: square;
}

article {
	margin-bottom: var(--app-block-spacing-vertical);
	padding: var(--app-block-spacing-vertical) var(--app-block-spacing-horizontal);
	border-radius: var(--app-border-radius);
	background: var(--app-background-color);
}

article > header,
article > footer {
	margin-right: calc(var(--app-block-spacing-horizontal) * -1);
	margin-left: calc(var(--app-block-spacing-horizontal) * -1);
	padding: calc(var(--app-block-spacing-vertical) * 0.66)
		var(--app-block-spacing-horizontal);
}

article > header {
	margin-top: calc(var(--app-block-spacing-vertical) * -1);
	margin-bottom: var(--app-block-spacing-vertical);
	border-top-right-radius: var(--app-border-radius);
	border-top-left-radius: var(--app-border-radius);
}

article > footer {
	margin-top: var(--app-block-spacing-vertical);
	margin-bottom: calc(var(--app-block-spacing-vertical) * -1);
	border-bottom-right-radius: var(--app-border-radius);
	border-bottom-left-radius: var(--app-border-radius);
}

.container--grid {
	grid-column-gap: var(--app-grid-column-gap);
	grid-row-gap: var(--app-grid-row-gap);
	display: grid;
	grid-template-columns: 1fr;
}

@media (min-width: 768px) {
	.container--grid {
		grid-template-columns: repeat(auto-fit, minmax(0%, 1fr));
	}
}

hr {
	margin: var(--app-typography-spacing-vertical) 0;
	color: var(--app-accent-color);
}

.accent {
	background: var(--app-accent-color);
	height: var(--app-block-spacing-vertical);
}

.container--grid > * {
	min-width: 0;
}

.post-card {
	border: solid 2px var(--app-accent-color);
}

